<resources>
    <string name="app_name">LoginBeeMob</string>
    <string name="text_main_beemob">BEEMOB</string>
    <string name="text_main_user_name">User name</string>
    <string name="text_main_password">Password</string>
    <string name="checkbox_main_remember">Remember me</string>
    <string name="button_main_login">LOGIN</string>
    <string name="hint_edittext_email">Email or Phone number</string>
    <string name="hint_edittext_password">Password</string>
    <string name="text_login_beemod_welcome">Welcome to BeeMob!!!!</string>
    <string name="button_loginbeemob_ok">OK</string>

    <string name="text_beemobtrue_firstname">First Name:</string>
    <string name="text_beemobtrue_lastname">Last Name:</string>
    <string name="text_beemobtrue_passphrase">Passphrase:</string>
    <string name="text_beemobtrue_country">Country:</string>
    <string-array name="array_beemobtrue_country">
        <item>Afghanistan</item>
        <item>Afghanistan 2</item>
        <item>Albania</item>
        <item>Albania 2</item>
        <item>Albania 3</item>
        <item>Albania 4</item>
        <item>	Algeria      	</item>
        <item>	Andorra      	</item>
        <item>	Andorra 2      	</item>
        <item>	Angola      	</item>
        <item>	Angola 2      	</item>
        <item>	Antigua and Barbuda      	</item>
        <item>	Antigua and Barbuda 2      	</item>
        <item>	Argentina      	</item>
        <item>	Armenia      	</item>
        <item>	Armenia 2      	</item>
        <item>	Australia      	</item>
        <item>	Australia 2      	</item>
        <item>	Australia 3      	</item>
        <item>	Austria      	</item>
        <item>	Austria 2      	</item>
        <item>	Azerbaijan      	</item>
        <item>	Azerbaijan 2      	</item>
        <item>	Bahamas, The      	</item>
        <item>	Bahamas, The 2      	</item>
        <item>	Bahrain      	</item>
        <item>	Bangladesh      	</item>
        <item>	Bangladesh 2      	</item>
        <item>	Bangladesh 3      	</item>
        <item>	Bangladesh 4      	</item>
        <item>	Barbados      	</item>
        <item>	Belarus      	</item>
        <item>	Belgium      	</item>
        <item>	Belize      	</item>
        <item>	Benin      	</item>
        <item>	Bhutan      	</item>
        <item>	Bolivia      	</item>
        <item>	Bosnia and Herzegovina      	</item>
        <item>	Botswana      	</item>
        <item>	Brazil      	</item>
        <item>	Britain      	</item>
        <item>	Brunei      	</item>
        <item>	Bulgaria      	</item>
        <item>	Burkina Faso      	</item>
        <item>	Burundi      	</item>
        <item>	(Burma)      	</item>
        <item>	Cambodia      	</item>
        <item>	Cameroon      	</item>
        <item>	Canada      	</item>
        <item>	Cape Verde      	</item>
        <item>	Central African Republic      	</item>
        <item>	Chad      	</item>
        <item>	Chile      	</item>
        <item>	China      	</item>
        <item>	Colombia      	</item>
        <item>	Comoros      	</item>
        <item>	Congo, Democratic Republic of the      	</item>
        <item>	Costa Rica      	</item>
        <item>	Croatia      	</item>
        <item>	Cuba      	</item>
        <item>	Cyprus      	</item>
        <item>	Czech Republic      	</item>
        <item>	Czechoslovakia      	</item>
        <item>	Denmark      	</item>
        <item>	Djibouti      	</item>
        <item>	Dominica      	</item>
        <item>	Dominican Republic      	</item>
        <item>	Ecuador      	</item>
        <item>	Egypt      	</item>
        <item>	El Salvador      	</item>
        <item>	England      	</item>
        <item>	Equatorial Guinea      	</item>
        <item>	Eritrea      	</item>
        <item>	Estonia      	</item>
        <item>	Ethiopia      	</item>
        <item>	Fiji      	</item>
        <item>	Finland      	</item>
        <item>	France      	</item>
        <item>	Gabon      	</item>
        <item>	Gambia, The      	</item>
        <item>	Georgia      	</item>
        <item>	Germany      	</item>
        <item>	Ghana      	</item>
        <item>	Great Britain      	</item>
        <item>	Greece      	</item>
        <item>	Greenland      	</item>
        <item>	Grenada      	</item>
        <item>	Guatemala      	</item>
        <item>	Guinea      	</item>
        <item>	Guinea-Bissau      	</item>
        <item>	Guyana      	</item>
        <item>	Haiti      	</item>
        <item>	Honduras      	</item>
        <item>	Hungary      	</item>
        <item>	Iceland      	</item>
        <item>	India      	</item>
        <item>	Indonesia      	</item>
        <item>	Iran      	</item>
        <item>	Iraq      	</item>
        <item>	Ireland      	</item>
        <item>	Ireland, Northern      	</item>
        <item>	Israel      	</item>
        <item>	Italy      	</item>
        <item>	Jamaica      	</item>
        <item>	Japan      	</item>
        <item>	Java      	</item>
        <item>	Jordan      	</item>
        <item>	Kazakhstan      	</item>
        <item>	Kenya      	</item>
        <item>	Kiribati      	</item>
        <item>	Korea, North      	</item>
        <item>	Korea, South      	</item>
        <item>	Kuwait      	</item>
        <item>	Kyrgyzstan      	</item>
        <item>	Laos      	</item>
        <item>	Latvia      	</item>
        <item>	Lebanon      	</item>
        <item>	Lesotho      	</item>
        <item>	Liberia      	</item>
        <item>	Libya      	</item>
        <item>	Liechtenstein      	</item>
        <item>	Lithuania      	</item>
        <item>	Luxembourg      	</item>
        <item>	Macedonia      	</item>
        <item>	Madagascar      	</item>
        <item>	Malawi      	</item>
        <item>	Malaysia      	</item>
        <item>	Maldives      	</item>
        <item>	Mali      	</item>
        <item>	Malta      	</item>
        <item>	Marshall Islands      	</item>
        <item>	Mauritania      	</item>
        <item>	Mauritius      	</item>
        <item>	Mexico      	</item>
        <item>	Micronesia      	</item>
        <item>	Moldova      	</item>
        <item>	Monaco      	</item>
        <item>	Mongolia      	</item>
        <item>	Morocco      	</item>
        <item>	Mozambique      	</item>
        <item>	Myanmar (Burma)      	</item>
        <item>	Namibia      	</item>
        <item>	Nauru      	</item>
        <item>	Nepal      	</item>
        <item>	Netherlands, The      	</item>
        <item>	New Zealand      	</item>
        <item>	Nicaragua      	</item>
        <item>	Niger      	</item>
        <item>	Nigeria      	</item>
        <item>	North Korea      	</item>
        <item>	Norway      	</item>
        <item>	Northern Ireland      	</item>
        <item>	Oman      	</item>
        <item>	Pakistan      	</item>
        <item>	Palau      	</item>
        <item>	Panama      	</item>
        <item>	Papua New Guinea      	</item>
        <item>	Paraguay      	</item>
        <item>	Peru      	</item>
        <item>	Philippines, The      	</item>
        <item>	Poland      	</item>
        <item>	Portugal      	</item>
        <item>	Qatar      	</item>
        <item>	Romania      	</item>
        <item>	Russia      	</item>
        <item>	Rwanda      	</item>
        <item>	St. Kitts and Nevis      	</item>
        <item>	St. Lucia      	</item>
        <item>	St. Vincent and the Grenadines      	</item>
        <item>	Samoa      	</item>
        <item>	San Marino      	</item>
        <item>	Sao Tome and Principe      	</item>
        <item>	Saudi Arabia      	</item>
        <item>	Scotland      	</item>
        <item>	Senegal      	</item>
        <item>	Seychelles      	</item>
        <item>	Sierra Leone      	</item>
        <item>	Singapore      	</item>
        <item>	Slovakia      	</item>
        <item>	Slovenia      	</item>
        <item>	Solomon Islands      	</item>
        <item>	Somalia      	</item>
        <item>	South Africa      	</item>
        <item>	South Korea      	</item>
        <item>	Spain      	</item>
        <item>	Sri Lanka      	</item>
        <item>	Sudan      	</item>
        <item>	Suriname      	</item>
        <item>	Swaziland      	</item>
        <item>	Sweden      	</item>
        <item>	Switzerland      	</item>
        <item>	Syria      	</item>
        <item>	Taiwan      	</item>
        <item>	Tajikistan      	</item>
        <item>	Tanzania      	</item>
        <item>	Thailand      	</item>
        <item>	Togo      	</item>
        <item>	Tonga      	</item>
        <item>	Trinidad and Tobago      	</item>
        <item>	Tunisia      	</item>
        <item>	Turkey      	</item>
        <item>	Turkmenistan      	</item>
        <item>	Tuvalu      	</item>
        <item>	Uganda      	</item>
        <item>	Ukraine      	</item>
        <item>	United Arab Emirates      	</item>
        <item>	United Kingdom      	</item>
        <item>	United States      	</item>
        <item>	Uruguay      	</item>
        <item>	Uzbekistan      	</item>
        <item>	Vanuatu      	</item>
        <item>	Vatican City      	</item>
        <item>	Venezuela      	</item>
        <item>	Vietnam      	</item>
        <item>	Wales      	</item>
        <item>	Yemen      	</item>
        <item>	Yugoslavia      	</item>
        <item>	Zambia      	</item>
        <item>	Zimbabwe      	</item>
    </string-array>
    <string name="text_beemobtrue_seat">Seat:</string>
    <string name="radio_beemobtrue_window">Window</string>
    <string name="radio_beemobtrue_aisle">Aisle</string>
    <string name="radio_beemobtrue_dontcare">Dont care</string>
    <string name="text_beemobtrue_luggage">Luggage(kg):</string>
    <string name="check_beemobtrue_vegetarian">Vegetarian</string>
    <string name="button_placereservation_exit">Exit</string>
    <string name="button_beemobtrue_placereservation">Place Reservation</string>
    <string name="text_placereservation_exit">Do you want exit???</string>
    <string name="button_placereservation_ok">OK</string>
    <string name="button_placereservation_no">NO</string>
</resources>